2003-11-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/export_image.c: Changes pixbuf_to_file_as_png simplify operation
	  No major speedup since that is not the time hog.

-- Release 0.15 --

2003-10-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Drawing of aperture macro primitive 7 was
	  severly broken. Revealed by Drew Moore who sent an example 
	  along. Thanks Drew! Closes bug #818307.

2003-09-28  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Patch from Peter Brueckner. Some Gerbers don't
	  have G04 but just G4. Peters patch fixes that for G- and M-codes.

2003-09-08  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Patch from Simon Munton to fix a problem with polygons
	  sometimes not being filled properly. Closes bug #800928 (which
	  he promptly had submitted).

	* src/gerber.c: Another patch from Simon. This time it fixes
	  circular polygon outlines by with a number of short segments.
	  Closes bug #603183, which was almost a year old. Thanks Simon!

-- Release 0.14 --

2003-05-31  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/amacro.c: Removed the last remaining malloc.h
	  after tips from Charles Lepple on the geda mailinglist.

2003-04-18  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Larry Doolittle had a problem when drawing
	  one of his files, a circle seemed to explode. I couldn't 
	  reproduce it, but after his tests I added this patch. Thanks Larry!

2003-04-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: RS274D caused segfaults again. Reported by Skurk.

-- Release 0.13 --

2003-03-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c, src/gerb_image.h, src/gerber.c: Angles are now
	  calculated as doubles instead of ints. For instance, the cslk
	  example now draws properly at the same time as Dans ridicously
	  small arcs also works.

	* src/gerber.c: Better sanity checks for angles of arcs, so
	  cw are drawn cw and ccw are drawn ccw. Closes bug #703265